--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="container">
+        <img src="./IMG_0153.png" class="corner-greet-image" alt="Logo">
+        <img src="./IMG_0154.png" class="corner-image" alt="Logo">
         <h1>Ramadan Kareem Tracksheet</h1>
         <div class="tracker">
             <h2>Quran Progress</h2>
